# isoxml

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
isoxml/: __init__.py  entity.py  isoxml.py  spec.py
isoxml/isoxml/: exception.py
src/isoxml/: isoxml.py  spec.py
tests/: entity_test.py  spec_test.py  test_entity.py  test_spec.py
